[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/coin.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Area2D.gd" type="Script" id=2]
[ext_resource path="res://scenes/movingPlatform.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/changeScene.gd" type="Script" id=4]
[ext_resource path="res://Assets/tile_sets/Objects/DoorLocked.png" type="Texture" id=5]
[ext_resource path="res://scenes/collisionObjects.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/tile_sets/tres/1.tres" type="TileSet" id=7]
[ext_resource path="res://scenes/fallingTile.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/tile_sets/Objects/DoorOpen.png" type="Texture" id=9]
[ext_resource path="res://scenes/Dialog_box.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/enemy.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/box_level.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/slimeEnemy.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 44.7822, 61.7336 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 704, 4.96484 )

[node name="leve3" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.25, 0.25 )
tile_set = ExtResource( 7 )
cell_size = Vector2( 256, 256 )
collision_layer = 8
collision_mask = 5
format = 1
tile_data = PoolIntArray( 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 720903, 2, 0, 786439, 2, 0, 851975, 2, 0, 852009, 0, 0, 852010, 1, 0, 852011, 1, 0, 852012, 1, 0, 852013, 1, 0, 852014, 1, 0, 852015, 1, 0, 852016, 1, 0, 852017, 1, 0, 852018, 1, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 0, 917516, 2, 0, 917517, 2, 0, 917518, 2, 0, 917519, 2, 0, 917520, 2, 0, 917521, 2, 0, 917522, 2, 0, 917523, 2, 0, 917524, 2, 0, 917525, 2, 0, 917526, 2, 0, 917527, 2, 0, 917528, 2, 0, 917529, 2, 0, 917530, 2, 0, 917531, 2, 0, 1245217, 0, 0 )

[node name="coins" type="Node2D" parent="."]
position = Vector2( 181.766, 373.098 )

[node name="coin" parent="coins" instance=ExtResource( 1 )]
position = Vector2( 542.905, -23.9165 )

[node name="coin2" parent="coins" instance=ExtResource( 1 )]
position = Vector2( 368.314, -11.9582 )

[node name="coin3" parent="coins" instance=ExtResource( 1 )]
position = Vector2( 1703.15, -113.406 )

[node name="Enemies" type="Node2D" parent="."]

[node name="enemy" parent="Enemies" instance=ExtResource( 11 )]
position = Vector2( 1252.85, 459.686 )

[node name="enemy2" parent="Enemies" instance=ExtResource( 11 )]
position = Vector2( 3008, 704 )

[node name="slimeEnemy" parent="Enemies" instance=ExtResource( 14 )]
position = Vector2( 1263.57, 839.095 )

[node name="changeScene" type="Area2D" parent="."]
position = Vector2( 3236.53, 635.356 )
collision_layer = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="changeScene"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="changeScene"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 49.5678, 159.552 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )

[node name="player" parent="." instance=ExtResource( 12 )]
position = Vector2( 53.8058, 155.314 )
JUMPFORCE = -1000
time = 60

[node name="CanvasLayer3" type="CanvasLayer" parent="player"]
layer = 50

[node name="Dialog_box" parent="player/CanvasLayer3" instance=ExtResource( 10 )]

[node name="collisions" type="Node2D" parent="."]

[node name="collisionObjects" parent="collisions" instance=ExtResource( 6 )]
position = Vector2( 2496, 896 )

[node name="collisionObjects6" parent="collisions" instance=ExtResource( 6 )]
position = Vector2( 704, 896 )

[node name="collisionObjects3" parent="collisions" instance=ExtResource( 6 )]
position = Vector2( 640, 896 )

[node name="collisionObjects4" parent="collisions" instance=ExtResource( 6 )]
position = Vector2( 2560, 896 )

[node name="collisionObjects5" parent="collisions" instance=ExtResource( 6 )]
position = Vector2( 2624, 896 )

[node name="collisionObjects2" parent="collisions" instance=ExtResource( 6 )]
position = Vector2( 1152, 1152 )

[node name="Area2D" type="Area2D" parent="collisions"]
position = Vector2( -311.131, 941.758 )
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisions/Area2D"]
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="collisions"]
position = Vector2( -311.131, 941.758 )
scale = Vector2( 1.46877, 1 )
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisions/Area2D2"]
position = Vector2( 2615.13, 594.242 )
shape = SubResource( 2 )

[node name="Area2D3" type="Area2D" parent="collisions"]
position = Vector2( -311.131, 941.758 )
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisions/Area2D3"]
position = Vector2( 2079.01, 601.793 )
shape = SubResource( 2 )

[node name="box_level2" parent="." instance=ExtResource( 13 )]
position = Vector2( 356, 588 )

[node name="moving platforms" type="Node2D" parent="."]

[node name="1" type="Node2D" parent="moving platforms"]

[node name="movingPlatform" parent="moving platforms/1" instance=ExtResource( 3 )]
position = Vector2( 1792, 832 )
move_to = Vector2( 256, -200 )

[node name="movingPlatform2" parent="moving platforms/1/movingPlatform" instance=ExtResource( 3 )]
position = Vector2( 64, 0 )
move_to = Vector2( 256, -200 )

[node name="2" type="Node2D" parent="moving platforms"]
position = Vector2( 2240, 1280 )
__meta__ = {
"_edit_group_": true
}

[node name="movingPlatform" parent="moving platforms/2" instance=ExtResource( 3 )]
move_to = Vector2( 1280, 0 )

[node name="movingPlatform2" parent="moving platforms/2" instance=ExtResource( 3 )]
position = Vector2( 64, 0 )
move_to = Vector2( 1280, 0 )

[node name="3" type="Node2D" parent="moving platforms"]
position = Vector2( 3584, 1280 )

[node name="movingPlatform" parent="moving platforms/3" instance=ExtResource( 3 )]
position = Vector2( -0.000244141, 0 )
move_to = Vector2( 0, -1024 )

[node name="movingPlatform2" parent="moving platforms/3" instance=ExtResource( 3 )]
position = Vector2( 63.9998, 0 )
move_to = Vector2( 0, -1024 )

[node name="fallingPlatforms" type="Node2D" parent="moving platforms"]

[node name="fallingTile" parent="moving platforms/fallingPlatforms" instance=ExtResource( 8 )]
position = Vector2( 2240, 512 )
damage = 20

[node name="fallingTile2" parent="moving platforms/fallingPlatforms" instance=ExtResource( 8 )]
position = Vector2( 2304, 512 )

[node name="fallingTile3" parent="moving platforms/fallingPlatforms" instance=ExtResource( 8 )]
position = Vector2( 2368, 512 )

[node name="fallingTile4" parent="moving platforms/fallingPlatforms" instance=ExtResource( 8 )]
position = Vector2( 2432, 512 )
[connection signal="body_entered" from="changeScene" to="changeScene" method="_on_changeScene_body_entered"]
[connection signal="body_entered" from="collisions/Area2D" to="collisions/Area2D" method="_on_body_entered"]
[connection signal="body_entered" from="collisions/Area2D2" to="collisions/Area2D2" method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="collisions/Area2D3" to="collisions/Area2D3" method="_on_body_entered"]
